--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#agenda" class="nav-link">Agenda</a></li>
                 <li><a href="#bootcamp" class="nav-link">Bootcamp</a></li>
                 <li><a href="#lugar" class="nav-link">Lugar</a></li>
+                <li><a href="manual.html" class="nav-link manual-link">Manual</a></li>
                 <li><a href="#registro" class="nav-link">Registro</a></li>
             </ul>
         </div>
