--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a href="#bootcamp" class="nav-link">Bootcamp</a></li>
                 <li><a href="#lugar" class="nav-link">Lugar</a></li>
                 <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="datos.html" class="nav-link">Datos</a></li>
                 <li><a href="manual.html" class="nav-link manual-link">Manual</a></li>
                 <li><a href="#registro" class="nav-link">Registro</a></li>
             </ul>
