--- a/blogs.html
+++ b/blogs.html
@@ -44,6 +44,7 @@
                 <li><a href="index.html#bootcamp" class="nav-link">Bootcamp</a></li>
                 <li><a href="index.html#lugar" class="nav-link">Lugar</a></li>
                 <li><a href="blogs.html" class="nav-link active">Blog</a></li>
+                <li><a href="datos.html" class="nav-link">Datos</a></li>
                 <li><a href="manual.html" class="nav-link manual-link">Manual</a></li>
                 <li><a href="index.html#registro" class="nav-link">Registro</a></li>
             </ul>
