--- a/blogs.html
+++ b/blogs.html
@@ -277,7 +277,7 @@
     <section class="blog-cta">
         <div class="container">
             <h2>¿Quieres aprender más sobre el uso de datos en políticas públicas?</h2>
-            <p>Asiste al Data Driven Day y conéctate con expertos, funcionarios y entusiastas de los datos.</p>
+            <p>Asiste al Data Driven Day en AVIADA, Hermosillo y conéctate con expertos, funcionarios y entusiastas de los datos.</p>
             <a href="index.html#registro" class="cta-button large">¡Regístrate Ahora!</a>
         </div>
     </section>
