--- a/datos.html
+++ b/datos.html
@@ -577,7 +577,7 @@
     <section class="blog-cta">
         <div class="container">
             <h2>Aprende más sobre análisis de datos para políticas públicas</h2>
-            <p>Asiste al Data Driven Day y desarrolla habilidades prácticas con expertos del sector.</p>
+            <p>Asiste al Data Driven Day en AVIADA, Hermosillo y desarrolla habilidades prácticas con expertos del sector.</p>
             <a href="index.html#registro" class="cta-button large">¡Regístrate Ahora!</a>
         </div>
     </section>
