--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="detail-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Centro de Convenciones Hermosillo</span>
+                        <span>AVIADA, Hermosillo</span>
                     </div>
                 </div>
                 <a href="#registro" class="cta-button animate-on-scroll pulse" style="animation-delay: 0.6s;">¡Regístrate Ahora!</a>
@@ -229,12 +229,12 @@
             <div class="container">
                 <i class="section-icon fas fa-map-marked-alt animate-on-scroll fade-in"></i>
                 <h2 class="animate-on-scroll fade-in-up">Lugar y Detalles</h2>
-                <p class="animate-on-scroll fade-in-up" style="animation-delay: 0.1s;"><strong>Lugar:</strong> Centro de Convenciones Hermosillo</p>
-                <p class="animate-on-scroll fade-in-up" style="animation-delay: 0.2s;"><strong>Dirección:</strong> Blvd. Rosales 123, Col. Centro, Hermosillo, Sonora</p>
+                <p class="animate-on-scroll fade-in-up" style="animation-delay: 0.1s;"><strong>Lugar:</strong> AVIADA</p>
+                <p class="animate-on-scroll fade-in-up" style="animation-delay: 0.2s;"><strong>Dirección:</strong> Banamichi, Las Quintas, 83240 Hermosillo, Sonora</p>
                 <p class="animate-on-scroll fade-in-up" style="animation-delay: 0.3s;">Contaremos con Wi-Fi y espacios colaborativos.</p>
                 <p class="animate-on-scroll fade-in-up" style="animation-delay: 0.4s;"><strong>¿Qué traer?:</strong> Laptop/tablet, cargador ¡y tu mejor actitud! 💻🔋</p>
                 <div class="map-placeholder animate-on-scroll fade-in" style="animation-delay: 0.5s;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1444.7879969177562!2d-110.95717233908721!3d29.072640475958837!2m3!1f0!2f0!3f0!3m2!1i1024!1i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjnCsDA0JzQyLjUiTiAxMTDCsDU3JzIwLjciVw!5e0!3m2!1ses-419!2smx!4v1620000000000!5m2!1ses-419!2smx" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3536.425440449306!2d-110.96426562523906!3d29.077309282143827!2m3!1f0!2f0!3f0!3m2!1i1024!1i768!4f13.1!3m3!1m2!1s0x86ce815f8815542b%3A0x486fad3c91dd41c0!2sAviada!5e0!3m2!1ses-419!2smx!4v1709533348144!5m2!1ses-419!2smx" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
